# dos-python-training

./: .env.dist  .gitignore  README.md  alembic.ini  cli.py  convert_csv_parquet.py  pyproject.toml  test_dotenv.py
campus_recruitment_etl/alembic/: env.py
campus_recruitment_etl/alembic/versions/: 2b2fd1b0d923_create_star_schema_campusrecruitment.py
campus_recruitment_etl/dependency_injection/: container.py  resources.py
campus_recruitment_etl/models/: dwh.py
campus_recruitment_etl/repositories/: dim_opleiding.py  dim_student.py
campus_recruitment_etl/services/: storage.py
campus_recruitment_etl/transformers/: base.py  dim_opleiding.py  dim_student.py
campus_recruitment_etl/types/: repositories.py
data/parquet/: 05.-gediplomeerden-hbo-2022.parquet  05.-gediplomeerden-wo-2022.parquet
data/raw/: 05.-gediplomeerden-hbo-2022.csv
